# yggdrasil

./: .gitignore  CNAME  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.github/workflows/: deploy.yml
public/json/: packages.json
src/: App.vue  main.ts
src/assets/: markdown.css
src/components/: Header.vue
src/router/: index.ts
src/scripts/: packages.ts  theme.ts
src/stores/: theme.ts
src/views/: HomeView.vue
tools/: deploy.py
